# PROJECT-HELL

./: .gitignore  EDGE_CLEAR_SUPPORT_REQUEST.md  FINAL_STATUS.md  LICENSE  MASTER.md  MASTER_ALL.md  MASTER_DOCUMENTATION.md  MASTER_RITHMIC.md  README.md  RITHMIC_RESOLUTION_PLAN.md  START_DATA_BRIDGE.bat  SUPPORT_CALL_QUICK_REFERENCE.md  demo.py  docker-compose.yml  package.json  quick_test_after_support.py  rithmic_data_bridge.py  rithmic_data_bridge_v2.py  server.js  test_connectivity.py  test_correct_endpoint.py  test_correct_endpoint_final.py  test_nova_connection.py  test_paper_trading.py  test_rithmic.py  test_rithmic_live.py
.github/: dependabot.yml
nexus/: AGENTS.md  RUN.md  index.html  package-lock.json  package.json  vite.config.js
nexus/rust-backend/: Cargo.toml  README_V2.md
nexus/rust-backend/src/: main.rs  rithmic.rs  state_recovery.rs
nova/: DEPLOYMENT_CHECKLIST.md  INTEGRATION_CHECKLIST.md  LAUNCHER.bat  PROJECT_STATUS.md  QUICK_START.md  README.md  launch.bat
nova/shared_pipeline/: Cargo.toml  build.rs
overseer/: .gitignore  AGENTS.md  CQG_INTEGRATION.md  QUANTOWER_BRIDGE.md  README.md  jogiapp.desktop  jogiapp.ps1  jogiapp.py  jogiapp.py.bak  jogiapp.sh  main.py  opencodecontext.md  overseer_dashboard.py  requirements.txt  rtrader_excel_guide_extract.txt  rtrader_trader_guide_extract.txt  run_hub_listener.py  run_watchdog.ps1  setup.ps1  status.ps1  supervisor.py
prophet/: config.py  debug_browser.js  fetch_deriv_data.js  fetch_deriv_data_v2.js  final_probe.py  get_creds.py  last_try.js  main_deriv.py  master_probe.py  mcp_control.py  (+10 more)
(+635 files in other folders)
