[package]
name = "nexus-flow-backend"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
flatbuffers = "24.3"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ordered-float = "4"
parking_lot = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
dotenv = "0.15"
chrono = "0.4"
rithmic-rs = "2.0"

[build-dependencies]
prost-build = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true